# revlm

./: .clang-format  .clangd  .dockerignore  .env.example  .gitattributes  .gitignore  .impeccable.md  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CODEOWNERS  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.cursor/: settings.json
.cursor/rules/: backend-approval.mdc  data-validation-layers.mdc  store-nested-data.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  (+3 more)
backend/: CMakeLists.txt
backend/include/: odb_entities.hpp
backend/include/auth/: crypto.hpp  security.hpp  session.hpp  users.hpp
backend/include/billing/: billing.hpp
backend/include/channels/: channel_groups.hpp  channels.hpp
backend/include/config/: app_settings.hpp  config.hpp
backend/include/errors/: errors.hpp
backend/include/models/: models.hpp  quota.hpp
backend/include/proxy/: anthropics_messages.hpp  gateway.hpp  openai_chat.hpp  openai_responses.hpp  upstream.hpp
backend/include/proxy_request/: anthropics_messages.hpp  api_orchestrate.hpp  gateway.hpp  gateway_resilience.hpp  http_client.hpp  openai_chat.hpp  openai_responses.hpp  responses_proxy.hpp  routing_data_source.hpp  token_auth.hpp  upstream.hpp
backend/include/proxy_response/: anthropics_messages.hpp  api_stream.hpp  gateway.hpp  gateway_stream.hpp  openai_chat.hpp  openai_responses.hpp  upstream_http.hpp
backend/include/request/: proxy_request.hpp  request.hpp
backend/include/runtime/: concurrency.hpp  runtime_cache.hpp  runtime_workers.hpp
backend/include/scheduler/: scheduler.hpp
backend/include/server/: http_dispatch.hpp  http_server.hpp  tokens.hpp
backend/include/store/: database.hpp  migrations.hpp  mysql.hpp  schema.hpp
backend/include/usage/: admin_usage_api.hpp  usage.hpp  usage_aggregation.hpp  usage_charge.hpp  usage_commit_jobs.hpp  usage_queries.hpp  user_usage_api.hpp
backend/include/users/: token_api.hpp  tokens.hpp  user_admin_api.hpp  user_api.hpp  users.hpp
backend/include/util/: datetime.hpp  http_query.hpp  json.hpp  json_convert.hpp  json_util.hpp  strings.hpp  user_input.hpp
backend/include/version/: version.hpp
backend/migrations/: 0001_baseline.sql  0002_drop_token_model_mappings.sql  0003_request_response_ids.sql  0004_token_direct_channel.sql  0005_drop_request_status.sql  0007_token_channel_group.sql  0008_channel_type_string.sql  0009_request_usd.sql  0010_sessions.sql
backend/src/: main.cpp  tmp_devseed.cpp
backend/src/auth/: crypto.cpp  security.cpp  session.cpp  users.cpp
backend/src/billing/: billing.cpp
backend/src/channels/: channel_admin_api.cpp  channel_api.cpp  channel_groups.cpp  channel_groups_admin_api.cpp  channel_groups_api.cpp  channels.cpp
backend/src/config/: app_settings.cpp  config.cpp
backend/src/models/: models.cpp  quota.cpp
backend/src/proxy/: anthropics_messages.cpp  gateway.cpp  openai_chat.cpp  openai_responses.cpp  upstream.cpp
backend/src/proxy_request/: anthropics_messages.cpp  api_orchestrate.cpp  gateway.cpp  gateway_resilience.cpp  http_client.cpp  openai_chat.cpp  openai_responses.cpp  responses_proxy.cpp  token_auth.cpp  upstream.cpp
backend/src/proxy_response/: anthropics_messages.cpp  api_stream.cpp  openai_chat.cpp  openai_responses.cpp  upstream_http.cpp
backend/src/request/: request.cpp
backend/src/runtime/: concurrency.cpp  runtime_cache.cpp  runtime_workers.cpp
backend/src/scheduler/: scheduler.cpp
backend/src/server/: http_dispatch.cpp  http_dispatch_usage.inc.hpp  http_server.cpp  tokens.cpp
backend/src/store/: database.cpp  migrations.cpp  mysql.cpp  schema.cpp
backend/src/usage/: admin_usage_api.cpp  usage.cpp  usage_aggregation.cpp  usage_charge.cpp  usage_commit_jobs.cpp  usage_queries.cpp  user_usage_api.cpp
backend/src/users/: token_api.cpp  tokens.cpp  user_admin_api.cpp  user_api.cpp  users.cpp
backend/src/util/: http_query.cpp  json_util.cpp  strings.cpp  user_input.cpp
backend/src/version/: version.cpp
backend/tests/: CMakeLists.txt  README.md
backend/tests/auth/: admin_users_test.cpp  auth_middleware_mysql_test.cpp  security_test.cpp  user_api_mysql_test.cpp  users_test.cpp
backend/tests/billing/: billing_mysql_test.cpp  billing_test.cpp
backend/tests/channels/: admin_channel_groups_contract_test.cpp  channel_groups_contract_test.cpp  http_server_mysql_channel_admin_test.cpp  http_server_mysql_channel_test.cpp  token_channel_groups_mysql_test.cpp
backend/tests/config/: app_settings_mysql_test.cpp  app_settings_test.cpp  config_test.cpp
backend/tests/models/: models_test.cpp  quota_mysql_test.cpp  quota_test.cpp
backend/tests/proxy/: gateway_failover_mysql_test.cpp  gateway_resilience_test.cpp  http_server_mysql_responses_test.cpp  upstream_test.cpp
backend/tests/proxy_request/: gateway_failover_mysql_test.cpp  gateway_resilience_test.cpp  http_server_mysql_responses_compact_test.cpp  http_server_mysql_responses_test.cpp  upstream_test.cpp
backend/tests/runtime/: concurrency_test.cpp  runtime_cache_test.cpp  runtime_workers_test.cpp
backend/tests/scheduler/: scheduler_test.cpp
backend/tests/server/: http_server_mysql_chat_completions_test.cpp  http_server_mysql_messages_test.cpp  http_server_mysql_token_models_test.cpp  http_server_oauth_test.cpp  http_server_test.cpp  http_server_tz_mysql_test.cpp  token_api_mysql_test.cpp  tokens_test.cpp
backend/tests/store/: migrations_mysql_test.cpp  migrations_test.cpp  mysql_test_env.hpp
backend/tests/usage/: admin_usage_mysql_test.cpp  usage_aggregation_mysql_test.cpp  usage_commit_jobs_mysql_test.cpp  usage_mysql_test.cpp  usage_test.cpp
backend/tests/users/: admin_users_test.cpp  token_api_mysql_test.cpp  tokens_test.cpp  user_api_mysql_test.cpp  users_test.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  EmbedSqlMigrations.cmake  GenerateEmbeddedMigrations.cmake  OdbCompile.cmake
docs/: proxy-request-unified-design.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
scripts/: install-git-hooks.sh
(+111 files in other folders)
